# grawitometr_planetarium

./: .prettierignore  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  serial.rs
src/components/: DevNav.vue  Footer.vue
src/router/: index.ts
src/stores/: duration.ts  error.ts  serial.ts
src/types/: serial.ts
src/utils/: configConsts.ts
src/views/: Home.vue  Overview.vue  Prepare.vue  Problem.vue  SerialInterface.vue  Setup.vue
